{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 150,
  "lineage": "8b3f0ce2-3eaa-6f04-ff06-e7b1085a3513",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e55aac0117c9201",
            "domain": "vpc",
            "id": "eipalloc-01e55aac0117c9201",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-228-94-169.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.228.94.169",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.production-igw",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0367f5b2c958d6584",
            "domain": "vpc",
            "id": "eipalloc-0367f5b2c958d6584",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-18-200-15-244.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.200.15.244",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.production-igw",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055b80305b43c10d7",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0585cf543a6b64358",
            "domain": "vpc",
            "id": "eipalloc-055b80305b43c10d7",
            "instance": "i-0960e0bdcd1121060",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-07e1086d1a71bbe31",
            "private_dns": "ip-10-0-1-50.eu-west-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-108-128-19-94.eu-west-1.compute.amazonaws.com",
            "public_ip": "108.128.19.94",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.production-igw",
            "aws_network_interface.produciton-subnet-nic",
            "aws_security_group.allow_web",
            "aws_subnet.production-subnet",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026e72e4e468afa7b",
            "arn": "arn:aws:ec2:eu-west-1:571804394804:instance/i-0960e0bdcd1121060",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0960e0bdcd1121060",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jen-irl",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-07e1086d1a71bbe31"
              }
            ],
            "primary_network_interface_id": "eni-07e1086d1a71bbe31",
            "private_dns": "ip-10-0-1-50.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "108.128.19.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b29a748e6aa52ba9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060b90235ce541bd0",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0afc328e2f495a4dd"
            ]
          },
          "dependencies": [
            "aws_network_interface.produciton-subnet-nic",
            "aws_security_group.allow_web",
            "aws_subnet.production-subnet",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "production-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:571804394804:internet-gateway/igw-0f82fd89139279961",
            "id": "igw-0f82fd89139279961",
            "owner_id": "571804394804",
            "tags": {
              "Name": "Production-IGW"
            },
            "tags_all": {
              "Name": "Production-IGW"
            },
            "vpc_id": "vpc-0d6644db86ca834ef"
          },
          "dependencies": [
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e55aac0117c9201",
            "connectivity_type": "public",
            "id": "nat-075e3b4b083015133",
            "network_interface_id": "eni-0b8b6d8d3aa218161",
            "private_ip": "10.0.1.78",
            "public_ip": "54.228.94.169",
            "subnet_id": "subnet-060b90235ce541bd0",
            "tags": {
              "Name": "NAT 1a"
            },
            "tags_all": {
              "Name": "NAT 1a"
            }
          },
          "dependencies": [
            "aws_eip.nat1a",
            "aws_internet_gateway.production-igw",
            "aws_subnet.production-subnet",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0367f5b2c958d6584",
            "connectivity_type": "public",
            "id": "nat-07ac1867289a60f79",
            "network_interface_id": "eni-048134e9712d8415a",
            "private_ip": "10.0.1.236",
            "public_ip": "18.200.15.244",
            "subnet_id": "subnet-060b90235ce541bd0",
            "tags": {
              "Name": "NAT 1b"
            },
            "tags_all": {
              "Name": "NAT 1b"
            }
          },
          "dependencies": [
            "aws_eip.nat1b",
            "aws_internet_gateway.production-igw",
            "aws_subnet.production-subnet",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "produciton-subnet-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:571804394804:network-interface/eni-07e1086d1a71bbe31",
            "id": "eni-07e1086d1a71bbe31",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:b6:21:eb:2e:d7",
            "owner_id": "571804394804",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0afc328e2f495a4dd"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060b90235ce541bd0"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.production-subnet",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-route-table-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:571804394804:route-table/rtb-0e72e061c0247107e",
            "id": "rtb-0e72e061c0247107e",
            "owner_id": "571804394804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-075e3b4b083015133",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DB-RT-1a"
            },
            "tags_all": {
              "Name": "DB-RT-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6644db86ca834ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1a",
            "aws_internet_gateway.production-igw",
            "aws_nat_gateway.gw1a",
            "aws_subnet.production-subnet",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-route-table-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:571804394804:route-table/rtb-023e762194a93c11e",
            "id": "rtb-023e762194a93c11e",
            "owner_id": "571804394804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ac1867289a60f79",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DB-RT-1b"
            },
            "tags_all": {
              "Name": "DB-RT-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6644db86ca834ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1b",
            "aws_internet_gateway.production-igw",
            "aws_nat_gateway.gw1b",
            "aws_subnet.production-subnet",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "production-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:571804394804:route-table/rtb-0109800dbaa18d48f",
            "id": "rtb-0109800dbaa18d48f",
            "owner_id": "571804394804",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f82fd89139279961",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f82fd89139279961",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Production-RT"
            },
            "tags_all": {
              "Name": "Production-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6644db86ca834ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.production-igw",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09171df3529e85f55",
            "route_table_id": "rtb-0109800dbaa18d48f",
            "subnet_id": "subnet-060b90235ce541bd0"
          },
          "dependencies": [
            "aws_internet_gateway.production-igw",
            "aws_route_table.production-route-table",
            "aws_subnet.production-subnet",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c360dd4b4c4e26d",
            "route_table_id": "rtb-0e72e061c0247107e",
            "subnet_id": "subnet-0f35935940142c20c"
          },
          "dependencies": [
            "aws_eip.nat1a",
            "aws_internet_gateway.production-igw",
            "aws_nat_gateway.gw1a",
            "aws_route_table.db-route-table-1a",
            "aws_subnet.db-subnet-1a",
            "aws_subnet.production-subnet",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0bd932825189aa2",
            "route_table_id": "rtb-023e762194a93c11e",
            "subnet_id": "subnet-0425de327e559d93c"
          },
          "dependencies": [
            "aws_eip.nat1b",
            "aws_internet_gateway.production-igw",
            "aws_nat_gateway.gw1b",
            "aws_route_table.db-route-table-1b",
            "aws_subnet.db-subnet-1b",
            "aws_subnet.production-subnet",
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:571804394804:security-group/sg-0afc328e2f495a4dd",
            "description": "Allow web in traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afc328e2f495a4dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "571804394804",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6644db86ca834ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:571804394804:subnet/subnet-0f35935940142c20c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f35935940142c20c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571804394804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB-Subnet-1a"
            },
            "tags_all": {
              "Name": "DB-Subnet-1a"
            },
            "vpc_id": "vpc-0d6644db86ca834ef"
          },
          "dependencies": [
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:571804394804:subnet/subnet-0425de327e559d93c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0425de327e559d93c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571804394804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB-Subnet-1b"
            },
            "tags_all": {
              "Name": "DB-Subnet-1b"
            },
            "vpc_id": "vpc-0d6644db86ca834ef"
          },
          "dependencies": [
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "production-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:571804394804:subnet/subnet-060b90235ce541bd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060b90235ce541bd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571804394804",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Production-Subnet"
            },
            "tags_all": {
              "Name": "Production-Subnet"
            },
            "vpc_id": "vpc-0d6644db86ca834ef"
          },
          "dependencies": [
            "aws_vpc.production-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "production-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:571804394804:vpc/vpc-0d6644db86ca834ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-065f8a3499393f1f6",
            "default_route_table_id": "rtb-028ccd46f3b7c46d7",
            "default_security_group_id": "sg-058342914fa90a968",
            "dhcp_options_id": "dopt-059b723bd6a780700",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6644db86ca834ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-028ccd46f3b7c46d7",
            "owner_id": "571804394804",
            "tags": {
              "Name": "Production-VPC"
            },
            "tags_all": {
              "Name": "Production-VPC"
            }
          }
        }
      ]
    }
  ]
}